--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -24,8 +24,10 @@
   color: #212121;
   margin: 0 0 12px 0;
   text-overflow: ellipsis;
-  white-space: nowrap;
   overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
   max-width: 420px;
 }
 
@@ -33,13 +35,13 @@
   line-height: 1;
   font-weight: 500;
   font-size: 16px;
-  color: #212121b2;
+  color: #212121;
   opacity: 70%;
   margin: 0;
   text-overflow: ellipsis;
   overflow: hidden;
   display: -webkit-box;
-  line-clamp: 3;
+  -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
 }
 
@@ -129,8 +131,8 @@
     padding-top: 20px;
     padding-bottom: 12px;
     margin: 0;
-    max-height: 80px;
-    max-width: 80px;
+    height: 80px;
+    width: 80px;
   }
 
   .profile__bio {
@@ -139,8 +141,7 @@
   }
 
   .profile__name {
-    margin: 0;
-    padding-bottom: 6px;
+    margin: 0 0 6px 0;
     font-size: 20px;
   }
 
